[package]
name = "vatsim_online"
version = "0.1.0"
edition = "2021"
authors = ["Celeo <mattboulanger@fastmail.com>"]
description = "See pilots and controllers online in VATSIM"
readme = "README.md"
homepage = "https://github.com/celeo/vatsim_online"
repository = "https://github.com/celeo/vatsim_online"
license = "MIT OR Apache-2.0"
exclude = [".github"]
keywords = ["vatsim"]
categories = []

[dependencies]
anyhow = "1.0.58"
chrono = "0.4.19"
clap = { version = "3.2.16", features = ["derive"] }
crossterm = "0.24.0"
fern = "0.6.1"
log = "0.4.17"
once_cell = "1.13.0"
rand = "0.8.5"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
tui = "0.18.0"

[dev-dependencies]
mockito = "0.31.0"
